--- a/package.json
+++ b/package.json
@@ -27,27 +27,26 @@
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
-    "next": "^15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
-  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.23.0",
-    "eslint-config-next": "^15.2.3",
+    "eslint-config-next": "^14.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.35",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
