--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
-  command = "npm run build"
-  publish = ".next"
-  environment = { NEXT_PUBLIC_ANALYTICS_ID = "false" }
+  command = "pnpm build"
+  publish = "out"
+  environment = { 
+    NEXT_PUBLIC_ANALYTICS_ID = "false",
+    NODE_VERSION = "20"
+  }
 
 [context.production.environment]
   NODE_VERSION = "20"
